--- a/src/app/components/demandes/form-demande/form-demande.component.html
+++ b/src/app/components/demandes/form-demande/form-demande.component.html
@@ -1,5 +1,12 @@
 <font face="time new roman">
     <div class="card container col-sm-12 mt-5">
+
+        <div class="card-header">
+            <h3 class='text-center'>
+                <i class="fas fa-sign-in-alt mr-2">
+                </i>Formulaire demande de permission
+            </h3>
+        </div>
         
         <div class="card-body">
             <div style="width:1000px; margin:0px auto">
@@ -9,84 +16,119 @@
                         <div class="row col-sm-12 mt-3 ms-1 ml-1">
 
                             <div class="form-group col-sm-4">
+                                <label for="nom_service">Matricule <span
+                                    class="text-danger"> *</span></label>
                                 <input type="text" name="matricule" required formControlName="matricule" value=""
-                                    class="form-control" placeholder="Matricule">
+                                    class="form-control" placeholder="saisir matricule">
                             </div>
 
                             <div class="form-group col-sm-4">
+                                <label for="nom_service">Prénom <span
+                                    class="text-danger"> *</span></label>
                                 <input type="text" name="prenom" required formControlName="prenom" value=""
-                                    class="form-control" placeholder="Prenom">
+                                    class="form-control" placeholder="saisir prenom">
                             </div>
 
                             <div class="form-group col-sm-4">
+                                <label for="nom_service">Nom <span
+                                    class="text-danger"> *</span></label>
                                 <input type="text" name="nom" required formControlName="nom" value=""
-                                    class="form-control" placeholder="Nom">
+                                    class="form-control" placeholder="saisir nom">
                             </div>
-
                         </div>
                         <!--  -->
-                        <div class="row col-sm-12 mt-2 ms-1 ml-1">
-
+                        <div class="row col-sm-12 mt-3 ms-1 ml-1">
+                            <!--  -->
                             <div class="form-group col-sm-6">
-                                <input type="text" name="grade" required formControlName="grade" value=""
-                                    class="form-control" placeholder="Grade">
+                                <label for="nom_service">Grade <span
+                                        class="text-danger"> *</span></label>
+                                <input type="text" name="grade" required formControlName="grade" 
+                                    class="form-control" placeholder="saisir grade">
                             </div>
-
+                            <!--  -->
                             <div class="form-group col-sm-6">
-                                            <select formControlName="country" class="form-control text-center" >
-                                                <option [ngValue]="null" [selected]="true">choisir service</option>
-                                                <option [ngValue]="">SP CSA</option>
-                                                <option [ngValue]="">BS</option>
-                                                <option [ngValue]="">1ere Brigade</option>
-                                                <option [ngValue]="">2e Brigade</option>
-                                                <option [ngValue]="">3e Brigade</option>
-                                                <option [ngValue]="">CMP/AIBD</option> 
+                                <label for="nom_service"> Service <span
+                                        class="text-danger">*</span></label>
+                                            <select class="form-control" name="service" formControlName="service">
+                                                <option [selected]="true" value="">--séctionner service --</option>
+                                                <option value="Secretariat Particulier CSA">SP CSA</option>
+                                                <option value="Brigade Spéciale">BS</option>
+                                                <option value="1ere Brigade">Brigade 1</option>
+                                                <option value="2eme Brigade">Brigade 2</option>
+                                                <option value="3eme Brigade">Brigade 3</option>                                                  
                                             </select>
                                      
-                            </div>  
-
+                            </div>
+                            <!--  -->
                         </div>
                         <!--  -->
-                        <div class="row col-sm-12 mt-4 ms-1 ml-1">
-
+                        <div class="row col-sm-12 mt-3 ms-1 ml-1">
+                            <!--  -->
                             <div class="form-group col-sm-3">
-                                <input type="text" name="dateDebut" required formControlName="dateDebut" 
-                                    class="form-control" placeholder="Date debut: (jj/mm/aaaa)">
+                                <label for="nom_service"> Durée <span
+                                        class="text-danger">*</span></label>
+                                            <select class="form-control text-center" name="dureePermission" formControlName="dureePermission">
+                                                <option value="">-- séctionner durée --</option>
+                                                <option value="24">24 H (01 jour)</option>
+                                                <option value="48">48 H (02 jours)</option>
+                                                <option value="72">72 H (03 jours)</option>
+                                                <option value="96">96 H (04 jours)</option>
+                                                <option value="120">120 H (05 jours)</option>
+                                                <option value="144">144 H (06 jours)</option>       
+                                            </select>   
                             </div>
                             <!--  -->
                             <div class="form-group col-sm-3">
-                                <input type="text" name="dateFin" formControlName="dateFin" 
-                                    class="form-control" placeholder="Date fin: (jj/mm/aaaa)">
+                                <label for="nom_service">Date Debut <span
+                                        class="text-danger"> *</span></label>
+                                <input type="date" name="dateDebut" required formControlName="dateDebut" 
+                                    class="form-control">
                             </div>
-
+                            <!--  -->
                             <div class="form-group col-sm-3">
-                                <input type="text" name="dureePermission" required formControlName="" 
-                                    class="form-control" placeholder="Motif">
+                                <label for="nom_service">Motif<span
+                                        class="text-danger"> *</span></label>
+                                <input type="text" name="motif" formControlName="motif" 
+                                    class="form-control" placeholder="saisir motif demande">
                             </div>
-
+                            <!--  -->
                             <div class="form-group col-sm-3">
-                                <input type="text" name="destination" required formControlName="destination" 
-                                    class="form-control" placeholder="Destination">
-                            </div>
-
-                        </div>
-                        <div class="row col-sm-12 mt-3 ms-1">
-                            <div class="form-group col-sm-12">
-                                <textarea name="libelle" rows="10"  formControlName="libelle" 
-                                class="form-control" value="OBJET: Demande d'une permission d'absence"
-                                placeholder="" ngValue="Demande">
-                                </textarea>
+                                <label for="nom_service">Destination<span
+                                        class="text-danger"> *</span></label>
+                                <input type="text" name="destination" formControlName="destination" 
+                                    class="form-control" placeholder="saisir destination">
                             </div>
                         </div>
+                        <!--  -->
 
-                        <div class="footer col-sm-12 mt-2 ms-1 text-end">
-                            <button type="submit" (click)="printPage()"
-                                class="btn btn-outline-success col-sm-3 text-right">
-                                <i class="fas fa-check"></i>
-                                Imprimer
-                            </button>
+                        <div class="row footer col-sm-12 mt-5 ms-1">
+                            <!--  -->
+                            <!-- <div class="form-group col-sm-3 ms-20">
+                                <button type="submit"
+                                    class="btn btn-outline-success col-sm-12">
+                                    <a routerLink="/demandes" class="text-primary ms-2"> <i class="bi bi-plus"></i>
+                                        Retour </a>
+                                </button>
+                            </div> -->
+                            <!--  -->
+                            <div class="form-group col-sm-3">
+                                <button type="submit" (click)="saveAndImprimeNewDemande()" 
+                                    class="btn btn-outline-success col-sm-12">
+                                    <i class="fas fa-check"></i>
+                                    Enregistrer / Imprimer
+                                </button>
+                            </div>
                         </div>
+                        &nbsp;
+                        &nbsp;
+
                     </div>
+                    <!--  -->
+                    <div class="form-group col-sm-2 text-end">
+                        <a routerLink="/demandes" class="text-primary ms-2"> <i class="bi bi-0-circle"></i>
+                            Retour</a>
+                    </div>
+                    <!--  -->
                         &nbsp;
                         &nbsp;
                     </div>
