--- a/src/app/components/demandes/imprime-demande/imprime-demande.component.html
+++ b/src/app/components/demandes/imprime-demande/imprime-demande.component.html
@@ -53,6 +53,10 @@
                             <i class="fas fa-check"></i>
                             Générer en PDF
                         </button>
+                        <!-- <button class="btn btn-sm btn-outline-secondary" routerLink="/demandes/imprime/{{demande.idDemande}}">
+                            <i class="bi bi-printer ms-1"> Générer en PDF
+                            </i>
+                        </button> -->
                 </div>
 
             </div>
